improved analysis scripts

--- a/analysis_scripts/PS_G4_file_analysis.ipynb
+++ b/analysis_scripts/PS_G4_file_analysis.ipynb
@@ -83,6 +83,9 @@
     "#name = \"output_2.86GeV_W15.0mm_conventional\"\n",
     "#conv_th = 15 #mm\n",
     "\n",
+    "path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
+    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
+    "\n",
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_6GeV_sigma0.5mm_W4-24mm_conventional_gp/\"\n",
     "#name = \"output_6GeV_W17.0mm_conventional\"\n",
     "#conv_th = 17 #mm\n",
@@ -98,8 +101,8 @@
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_6GeV_sigma0.5mm_W9-15mm_crystalline_gp/\"\n",
     "#name = \"output_6GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
     "\n",
-    "path = \"/home/paterno/geant4-apps/PositronSource-build/output/test_G4_v2_2.86GeV/\"\n",
-    "name = \"output_2.86GeV_W15.0mm_conventional\"\n",
+    "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/test_G4_v2_2.86GeV/\"\n",
+    "#name = \"output_2.86GeV_W15.0mm_conventional\"\n",
     "#name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
     "\n",
     "\"\"\"\n",
@@ -132,11 +135,12 @@
    "outputs": [],
    "source": [
     "# Figure save option\n",
-    "saveFigs = False\n",
+    "saveFigs = True\n",
     "\n",
     "# Option to convert file for RF-Track\n",
-    "convertFileToRFTrack = False\n",
-    "setGaussianTimeShape = True"
+    "convertFileToRFTrack = True\n",
+    "setGaussianTimeShape = True\n",
+    "addID = False"
    ]
   },
   {
@@ -1154,8 +1158,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bc0e7b9-4760-482d-aaf7-b6ede52a9624",
-   "metadata": {},
+   "id": "58cb14b5-74df-434e-89b6-c2b1f916e32a",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "positrons"
@@ -1265,9 +1271,13 @@
     "    positrons[\"p[MeV/c]\"] = positrons.P\n",
     "    positrons[\"#x[mm]\"] = positrons[\"x\"]*10 #this is because they were previously converted form [mm] to [cm]\n",
     "    positrons[\"y[mm]\"] = positrons[\"y\"]*10\n",
-    "\n",
+    "    \n",
     "    ## Select only a set of variables\n",
-    "    positrons_out = positrons[[\"#x[mm]\", \"xp[mrad]\", \"y[mm]\", \"yp[mrad]\", \"p[MeV/c]\"]]\n",
+    "    if addID:\n",
+    "        positrons[\"ID\"] = list(range(1, len(positrons)+1))\n",
+    "        positrons_out = positrons[[\"#x[mm]\", \"xp[mrad]\", \"y[mm]\", \"yp[mrad]\", \"p[MeV/c]\", \"ID\"]]\n",
+    "    else:\n",
+    "        positrons_out = positrons[[\"#x[mm]\", \"xp[mrad]\", \"y[mm]\", \"yp[mrad]\", \"p[MeV/c]\"]]\n",
     "\n",
     "    ## Guassian sampling in time, to keep the RF phases of the Hybrid similar to the conventional scheme\n",
     "    c = 299792458 #m/s\n",
@@ -1285,6 +1295,18 @@
     "    name_out = name.replace('output', 'positrons')\n",
     "    positrons_out.to_csv(outpath + name_out + \".dat\", index=False, sep=' ') \n",
     "    print(\"positron beam phase-space converted to RF-Track format!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d10ead05-afc1-4b99-be15-59991f2f39ce",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "positrons_out"
    ]
   },
   {
