--- a/analysis_scripts/PS_G4_results_plot.ipynb
+++ b/analysis_scripts/PS_G4_results_plot.ipynb
@@ -206,10 +206,14 @@
     "rot_value = 45 if len(df_G4.iloc[-1].case) > len_th or len(df_G4.iloc[1:]) > len_th else 0\n",
     "\n",
     "if len(df_G4.iloc[0].case) > len_th:\n",
-    "    case_list_short = [item.split('W')[1].split('_')[0] for item in df_G4.case.values] #conventional or crystalline\n",
-    "    #case_list_short = [item.split('mis')[1].split('_')[0] for item in df_G4.case.values] #crystalline, misalignment - HT\n",
-    "    #case_list_short = [item.split('target')[1] for item in df_G4.case.values] #Hybrid\n",
-    "    df_G4.case = case_list_short"
+    "    if 'conventional' in path_G4 or 'crystalline' in path_G4:\n",
+    "        case_list_short = [item.split('W')[1].split('_')[0] for item in df_G4.case.values] #conventional or crystalline\n",
+    "    elif 'mis' in path_G4:\n",
+    "        case_list_short = [item.split('mis')[1].split('_')[0] for item in df_G4.case.values] #crystalline, misalignment - HT\n",
+    "    else:\n",
+    "        case_list_short = [item.split('target')[1] for item in df_G4.case.values] #Hybrid\n",
+    "    df_G4.case = case_list_short\n",
+    "    print(case_list_short)"
    ]
   },
   {
