improved analysis scripts

--- a/analysis_scripts/PS_G4_file_analysis.ipynb
+++ b/analysis_scripts/PS_G4_file_analysis.ipynb
@@ -135,10 +135,10 @@
    "outputs": [],
    "source": [
     "# Figure save option\n",
-    "saveFigs = True\n",
+    "saveFigs = False\n",
     "\n",
     "# Option to convert file for RF-Track\n",
-    "convertFileToRFTrack = True\n",
+    "convertFileToRFTrack = False\n",
     "setGaussianTimeShape = True\n",
     "addID = False"
    ]
@@ -1295,18 +1295,6 @@
     "    name_out = name.replace('output', 'positrons')\n",
     "    positrons_out.to_csv(outpath + name_out + \".dat\", index=False, sep=' ') \n",
     "    print(\"positron beam phase-space converted to RF-Track format!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d10ead05-afc1-4b99-be15-59991f2f39ce",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "positrons_out"
    ]
   },
   {
