improved analysis_scripts

--- a/analysis_scripts/PS_G4_file_analysis.ipynb
+++ b/analysis_scripts/PS_G4_file_analysis.ipynb
@@ -83,8 +83,8 @@
     "#name = \"output_2.86GeV_W15.0mm_conventional\"\n",
     "#conv_th = 15 #mm\n",
     "\n",
-    "path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
-    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
+    "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
+    "#name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
     "\n",
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_6GeV_sigma0.5mm_W4-24mm_conventional_gp/\"\n",
     "#name = \"output_6GeV_W17.0mm_conventional\"\n",
@@ -104,6 +104,14 @@
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/test_G4_v2_2.86GeV/\"\n",
     "#name = \"output_2.86GeV_W15.0mm_conventional\"\n",
     "#name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
+    "\n",
+    "#path = \"/home/paterno/geant4_workdir/PositronSource-build/output/\"\n",
+    "#name = \"output_2.86GeV_W2.50mm_D10cm_target10.00mm\"\n",
+    "\n",
+    "#path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W5-20mm_conventional_gp/\"\n",
+    "#name = \"output_2.86GeV_W15.0mm_conventional\"\n",
+    "path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
+    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
     "\n",
     "\"\"\"\n",
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_6GeV_sigma0.5mm_W_radiator2mm_D0-60cm_target9mm_gp/\"\n",
@@ -1288,7 +1296,7 @@
     "        gaussian_samples = np.random.normal(mean_value, std_value, num_sample)\n",
     "        t = gaussian_samples\n",
     "    else:        \n",
-    "        t = positrons.t *1e-6 * c #ns -> mm/c #TO CHECK!\n",
+    "        t = positrons.t * 1e-6 * c #ns -> mm/c\n",
     "    positrons_out.insert(4, 't[mm/c]', t)\n",
     "\n",
     "    ## Save the positron phase-space to a txt file\n",
@@ -1307,8 +1315,9 @@
    "outputs": [],
    "source": [
     "# Plot the positron beam time distribution\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.hist(positrons.t, density=False, bins=100, label='positrons original time distribution')\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "rLim = (-3*np.std(positrons.t) + np.mean(positrons.t), 3*np.std(positrons.t) + np.mean(positrons.t))\n",
+    "plt.hist(positrons.t, density=False, bins=100, range=rLim, label='positrons original time distribution')\n",
     "if convertFileToRFTrack and setGaussianTimeShape:\n",
     "    plt.hist(positrons_out[\"t[mm/c]\"]*1e6/c, density=False, bins=100, label='positrons distribution after Gaussian shaping')\n",
     "plt.legend(fontsize=12)\n",
@@ -1316,8 +1325,8 @@
     "plt.ylabel('Counts [arb. units]')\n",
     "plt.title('')\n",
     "plt.grid(True)\n",
-    "plt.yscale('log')\n",
-    "if saveFigs:\n",
+    "#plt.yscale('log')\n",
+    "saveFigs:\n",
     "    plt.savefig(outpath + 'eplusBeam_t_distrib_' + purename + '.jpg')\n",
     "plt.show()"
    ]
@@ -1511,7 +1520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
