improved analysis_scripts

--- a/analysis_scripts/PS_G4_file_analysis.ipynb
+++ b/analysis_scripts/PS_G4_file_analysis.ipynb
@@ -1484,6 +1484,7 @@
     "    ax3D.set_xlabel(\"z (mm)\", fontsize=fs)\n",
     "    ax3D.set_ylabel(\"x (mm)\", fontsize=fs)\n",
     "    ax3D.set_zlabel(\"y (mm)\", fontsize=fs)\n",
+    "    ax3D.xaxis.set_inverted(True)\n",
     "\n",
     "    elev = None\n",
     "    azim = 120\n",
