improved analysis_scripts

--- a/analysis_scripts/PS_G4_file_analysis.ipynb
+++ b/analysis_scripts/PS_G4_file_analysis.ipynb
@@ -110,8 +110,10 @@
     "\n",
     "#path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W5-20mm_conventional_gp/\"\n",
     "#name = \"output_2.86GeV_W15.0mm_conventional\"\n",
-    "path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
-    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
+    "#path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
+    "#name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
+    "path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W12mm_crystalline_mis_HT_gp/\"\n",
+    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.065A\"\n",
     "\n",
     "\"\"\"\n",
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_6GeV_sigma0.5mm_W_radiator2mm_D0-60cm_target9mm_gp/\"\n",
@@ -143,7 +145,7 @@
    "outputs": [],
    "source": [
     "# Figure save option\n",
-    "saveFigs = False\n",
+    "saveFigs = True\n",
     "\n",
     "# Option to convert file for RF-Track\n",
     "convertFileToRFTrack = False\n",
@@ -1326,7 +1328,7 @@
     "plt.title('')\n",
     "plt.grid(True)\n",
     "#plt.yscale('log')\n",
-    "saveFigs:\n",
+    "if saveFigs:\n",
     "    plt.savefig(outpath + 'eplusBeam_t_distrib_' + purename + '.jpg')\n",
     "plt.show()"
    ]
@@ -1459,7 +1461,7 @@
     "if len(df2) > 0:\n",
     "    df_sel = df2[(df2.particle == part_sel)].copy()\n",
     "    df_sel = df_sel[(df_sel.p >= p_low) & (df_sel.p <= p_high)].copy()\n",
-    "    df_sel.describe()"
+    "    #df_sel.describe()"
    ]
   },
   {
@@ -1492,7 +1494,7 @@
     "    #ax3D.view_init(elev, azim, roll)\n",
     "\n",
     "    if saveFigs:\n",
-    "        plt.savefig(fig_path + root_file.replace(\".root\", \"\") + '_3Ddistrib' + '.jpg')\n",
+    "        plt.savefig(outpath + '3Ddistrib_' + purename + '.jpg')\n",
     "    plt.show() "
    ]
   },
