improved analysis_scrips

--- a/analysis_scripts/PS_G4_file_analysis.ipynb
+++ b/analysis_scripts/PS_G4_file_analysis.ipynb
@@ -113,7 +113,7 @@
     "#path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W8-16mm_crystalline_gp/\"\n",
     "#name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.050A\"\n",
     "path = \"C:/DATI/Geant4/PositronSource-build/output/results_2.86GeV_sigma1.0mm_W12mm_crystalline_mis_HT_gp/\"\n",
-    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.000rad_pot0.065A\"\n",
+    "name = \"output_2.86GeV_W12.0mm_crystalline_mis0.002rad_pot0.065A\"\n",
     "\n",
     "\"\"\"\n",
     "#path = \"/home/paterno/geant4-apps/PositronSource-build/output/results_6GeV_sigma0.5mm_W_radiator2mm_D0-60cm_target9mm_gp/\"\n",
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "# Figure save option\n",
-    "saveFigs = True\n",
+    "saveFigs = False\n",
     "\n",
     "# Option to convert file for RF-Track\n",
     "convertFileToRFTrack = False\n",
@@ -1318,8 +1318,8 @@
    "source": [
     "# Plot the positron beam time distribution\n",
     "plt.figure(figsize=(10, 8))\n",
-    "rLim = (-3*np.std(positrons.t) + np.mean(positrons.t), 3*np.std(positrons.t) + np.mean(positrons.t))\n",
-    "plt.hist(positrons.t, density=False, bins=100, range=rLim, label='positrons original time distribution')\n",
+    "trLim = (-3*np.std(positrons.t) + np.mean(positrons.t), 3*np.std(positrons.t) + np.mean(positrons.t))\n",
+    "plt.hist(positrons.t, density=False, bins=100, range=trLim, label='positrons original time distribution')\n",
     "if convertFileToRFTrack and setGaussianTimeShape:\n",
     "    plt.hist(positrons_out[\"t[mm/c]\"]*1e6/c, density=False, bins=100, label='positrons distribution after Gaussian shaping')\n",
     "plt.legend(fontsize=12)\n",
