--- a/analysis_scripts/PS_G4_results_plot.ipynb
+++ b/analysis_scripts/PS_G4_results_plot.ipynb
@@ -208,7 +208,7 @@
     "if len(df_G4.iloc[0].case) > len_th:\n",
     "    if 'conventional' in path_G4 or 'crystalline' in path_G4:\n",
     "        case_list_short = [item.split('W')[1].split('_')[0] for item in df_G4.case.values] #conventional or crystalline\n",
-    "    elif 'mis' in path_G4:\n",
+    "    if 'mis' in path_G4:\n",
     "        case_list_short = [item.split('mis')[1].split('_')[0] for item in df_G4.case.values] #crystalline, misalignment - HT\n",
     "    else:\n",
     "        case_list_short = [item.split('target')[1] for item in df_G4.case.values] #Hybrid\n",
@@ -333,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
